--- a/source/css/_custom/Mala.styl
+++ b/source/css/_custom/Mala.styl
@@ -51,10 +51,14 @@ blockquote {
 }
 
 // footer info text color
-.powered-by, .theme-info { 
+.powered-by, .theme-info, .busuanzi-info { 
   a {
     color: $grey-dark;
   }
+}
+
+.busuanzi-info {
+  
 }
 
 a:hover {
