--- a/source/css/_schemes/Mala/index.styl
+++ b/source/css/_schemes/Mala/index.styl
@@ -277,7 +277,7 @@ ul li { list-style: circle; }
 }
 .footer-inner {
   margin: 0 auto;
-  text-align: left;
+  // text-align: left;
 
   +mobile() { text-align: center; }
 }
